Fix slider z-index

--- a/src/App.css
+++ b/src/App.css
@@ -137,6 +137,7 @@ nav a:hover {
   font-size: 12px;
   text-align: center;
   align-content: center;
+  z-index: 0 !important;
 }
 
 .table-button {
